--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/node-fetch": "^2.5.7",
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
+        "framer-motion": "^1.11.0",
         "node-fetch": "^2.6.0",
         "node-pre-gyp": "0.12.0",
         "react": "^16.13.1",
