--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "node-pre-gyp": "0.12.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-markdown": "^4.3.1",
         "react-scripts": "3.4.1",
         "semantic-ui-react": "^0.88.2",
         "typescript": "^3.7.5"
