--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
         "react-dom": "^16.13.1",
         "react-markdown": "^4.3.1",
         "react-scripts": "3.4.1",
+        "react-snap": "^1.23.0",
         "semantic-ui-react": "^0.88.2",
         "typescript": "^3.7.5"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "postbuild": "react-snap",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
